--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,295 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 62.5%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1.5;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+/* Mixins */
+.Font-changer {
+  font-size: 1rem;
+}
+html,
+body {
+  width: 1000px;
+  height: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: sans-serif;
+}
+@media (max-width: 500px) {
+  html,
+  body {
+    width: 450px;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+}
+/* Variables */
+header {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: flex-end;
+}
+@media (max-width: 500px) {
+  header {
+    justify-content: center;
+  }
+}
+header a {
+  margin-left: 20px;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+.intro-box {
+  background-color: darkgray;
+  color: white;
+  padding: 40px;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.intro-box img {
+  height: 480px;
+  width: 320px;
+}
+.intro-box h1 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  width: 100%;
+  border-bottom: 2px dashed white;
+}
+.intro-box p {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.intro-box button {
+  background-color: gray;
+  color: white;
+  width: 120px;
+  border: none;
+  border-radius: 6px;
+  padding: 4px 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.2rem;
+}
+.intro-box button:hover {
+  background-color: black;
+  color: darkgray;
+}
+.work {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+@media (max-width: 500px) {
+  .work {
+    flex-direction: column;
+    justify-content: space-around;
+  }
+}
+.work .info-box {
+  width: 460px;
+}
+.work .info-box h1 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 2.4rem;
+  font-weight: bold;
+}
+.work .info-box p {
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+@media (max-width: 500px) {
+  .work .info-box p {
+    font-size: 1rem;
+  }
+}
+.info-box2 h1 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 2.4rem;
+  font-weight: bold;
+}
+.info-box2 ul {
+  font-weight: bold;
+}
+.info-box2 ul li {
+  padding: 10px;
+  border-bottom: 1px solid black;
+}
+.info-box3 {
+  background-color: darkgray;
+  color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.info-box3 h1 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  text-align: center;
+}
+.info-box3 table {
+  text-align: center;
+  width: 100%;
+}
+.info-box3 table th {
+  padding-top: 7.5px;
+  padding-bottom: 7.5px;
+}
+.info-box3 table td {
+  padding-top: 7.5px;
+  padding-bottom: 7.5px;
+}
+.info-box3 table .head {
+  font-weight: bold;
+}
+.info-box3 table .data {
+  background-color: white;
+  color: black;
+}
+.copyright {
+  background-color: gray;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 0.9rem;
+  color: white;
+}
